--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="Details rinfo">
                 <P><b>Date Of Birth</b> : <span>20/08/1999</span></span></P>
                 <P><b>Marital Status</b> : <span>Single</span></P>
-                <P><b>Date Of Birth</b> : <span>Indian</span></P>
+                <P><b>Nationality</b> : <span>Indian</span></P>
 
             </div>
 
